<resources>
    <string name="app_name">MyAppFelipe</string>
    <string name="users">Ingrese su usuario</string>
    <string name="password">Ingrese su Contraseña</string>

    <string name="inter">Interfaces\nAndres Ceña</string>

    <string name="Login">Ingresar</string>

    <string name="regresar">regresar</string>

    <string name="successs">Ingreso satisfactoriamente</string>



    <string name="title_activity_segunda">segundaActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>